XWIKI-21272: History navigation arrows are not perceived as links and lacking contrast * Fixed one style lacking * Fixed tests

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/misc.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-resources/src/main/resources/flamingo/less/misc.less
@@ -416,6 +416,7 @@ dl.export-tree-legend dt + dd {
 .changes-info-arrow {
   font-size: 3em;
   line-height: 1;
+  align-self: center;
 }
 
 .changes-body > .changes-body-header {
